just added search customer using jquery-ui and fixed jquery-ui datepicker