@@ -1,9 +1,11 @@
 package com.mana.limo.controller.json;
 
 import com.mana.limo.controller.SaleController;
+import com.mana.limo.domain.Customer;
 import com.mana.limo.domain.Product;
 import com.mana.limo.domain.Sale;
 import com.mana.limo.domain.SaleItem;
+import com.mana.limo.dto.SaleItemDTO;
 import com.mana.limo.service.ProductService;
 import com.mana.limo.service.SaleItemService;
 import com.mana.limo.service.SaleService;
@@ -14,6 +16,8 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 /**
@@ -37,27 +41,54 @@ public class SalesJSONController {
 
     @GetMapping("/list")
     public List<Sale> getAllProducts(){
-        return saleService.getAllSales();
+        return saleService.getAllActiveSales().stream().map(sale -> {
+            sale.setSaleItems(saleItemService.getAllBySale(sale));
+            return sale;
+        }).collect(Collectors.toList());
+    }
+
+    @RequestMapping("/get-sale-by-id")
+    public Sale getCustomerById(@RequestParam(value = "id") String id){
+        return saleService.get(id);
     }
 
     @RequestMapping("/add-sale-item-to-sale")
-    public List<SaleItem> addSaleItem(@RequestParam("productId") String productId, @RequestParam("quantity") int quantity){
-        SaleItem saleIt=new SaleItem();
-        saleIt.setProduct(productService.get(productId));
-        saleIt.setQuantity(quantity);
-        SaleItem saleItem=saleItemService.Save(saleIt);
-        SaleController.saleItems.add(saleItem);
-        System.err.println("added sale item ::"+saleItem.getId());
-        return SaleController.saleItems;
+    public List<SaleItemDTO> addSaleItem(@RequestParam("productId") String productId, @RequestParam("quantity") int quantity){
+
+        Optional<SaleItemDTO> saleItemDTOOptional=SaleController.saleItemDTOS.stream().filter(saleItemDTO1 -> saleItemDTO1.getProduct().getId().equals(productId)).findFirst();
+        SaleItemDTO saleItemDTO=saleItemDTOOptional!=null && saleItemDTOOptional.isPresent()?saleItemDTOOptional.get():null;
+        SaleController.saleItemDTOS=SaleController.saleItemDTOS.stream().filter(saleItemDTO1 -> !saleItemDTO1.getProduct().getId().equals(productId)).collect(Collectors.toSet());
+
+        if(saleItemDTO!=null){
+            saleItemDTO.setQuantity(saleItemDTO.getQuantity()+quantity);
+            SaleController.saleItemDTOS.add(saleItemDTO);
+
+        }else {
+            Product product=productService.get(productId);
+            SaleItemDTO saleDTO=new SaleItemDTO(quantity, product);
+            SaleController.saleItemDTOS.add(saleDTO);
+        }
+        List<SaleItemDTO> saleItemDTOList= SaleController.saleItemDTOS.stream().collect(Collectors.toList());
+        return saleItemDTOList;
     }
 
     @RequestMapping("/remove-sale-item-to-sale")
-    public List<SaleItem> removeSaleItem(@RequestParam("itemId") String itemtId){
-        SaleItem saleItem=saleItemService.get(itemtId);
-        saleItemService.remove(saleItem);
-        SaleController.saleItems=SaleController.saleItems.stream().filter(saleItem1 -> !saleItem1.getId().equals(saleItem.getId())).collect(Collectors.toList());
-        System.err.println("removed sale item ::"+saleItem.getId()+"\nNOW::"+SaleController.saleItems);
-        return SaleController.saleItems;
+    public List<SaleItemDTO> removeSaleItem(@RequestParam("productId") String productId, @RequestParam("quantity") int quantity){
+        Optional<SaleItemDTO> saleItemDTOOptional=SaleController.saleItemDTOS.stream().filter(saleItemDTO1 -> saleItemDTO1.getProduct().getId().equals(productId)).findFirst();
+        SaleItemDTO saleItemDTO=saleItemDTOOptional!=null && saleItemDTOOptional.isPresent()?saleItemDTOOptional.get():null;
+        SaleController.saleItemDTOS=SaleController.saleItemDTOS.stream().filter(saleItemDTO1 -> !saleItemDTO1.getProduct().getId().equals(productId)).collect(Collectors.toSet());
+        if(saleItemDTO!=null && saleItemDTO.getQuantity()>quantity){
+            saleItemDTO.setQuantity(saleItemDTO.getQuantity()-quantity);
+            SaleController.saleItemDTOS.add(saleItemDTO);
+        }
+        return SaleController.saleItemDTOS.stream().toList();
+    }
+
+
+    @RequestMapping("/get-sale-item-to-sale")
+    public List<SaleItemDTO> getSaleItem(){
+        List<SaleItemDTO> items=SaleController.saleItemDTOS.stream().toList();
+        return items;
     }
 
 }
